Add the "Instant 80" patch. This is a soft80 preview mode. It was published in COMPUTE's Gazette December 1987. The article is on page 76 and the program listing on page 97. This was disassembled and variable names / labels added with some attempt to make sense.
I fully admit I don't (yet) understand what this code is doing
for soft80 support well enough.  Therefore my names / labels
might not make a ton of sense to you.  Please file an issue or
pull request.

--- a/speedscript.cfg
+++ b/speedscript.cfg
@@ -35,6 +35,8 @@ MEMORY {
     DATA:     start = $1E12, size= $01F6;
     VARS:     start = $2008, size= $046A;
     ENDPAD:   start = $2472, size= $0001;
+    INSTPAD:  start = $2008, size= $04F8;
+    INST80:   start = $2500, size= $01C2;
 }
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp,  optional = yes;
@@ -64,8 +66,9 @@ SEGMENTS {
     SEARCH:   load = SEARCH,   type = rw;
     PRINT2:   load = PRINT2,   type = rw;
     FREEMEM:  load = FREEMEM,  type = rw;
-    #RODATA:   load = DATA,     type = ro,  optional = yes;
-    DATA:     load = DATA,     type = rw;#,  optional = yes;
+    DATA:     load = DATA,     type = rw;
     VARS:     load = VARS,     type = bss, optional = yes, define = yes;
     ENDPAD:   load = ENDPAD,   type = rw,  optional = yes;
+    INSTPAD:  load = INSTPAD,  type = rw, optional = yes, define = yes;
+    INST80:   load = INST80,   type = rw, optional = yes, define = yes;
 }
