Add the Easy Cursor patch from COMPUTE's Gazette, November 1989. It makes the up / down arrow move more up & down instead of by sentences.
It also works around the CBM DOS bug where '@' doesn't properly
overwrite a file.  The new ECSAVE function scratches the file
first.

This was reverse engineered from the type in code via jc64dis.

TODO: Fix the labels to make more sense.  Clean up the comments.

--- a/speedscript.cfg
+++ b/speedscript.cfg
@@ -37,6 +37,8 @@ MEMORY {
     ENDPAD:   start = $2472, size= $0001;
     INSTPAD:  start = $2008, size= $04F8;
     INST80:   start = $2500, size= $01C2;
+    EZPAD:    start = $26C2, size= $013F;
+    EZCURS:   start = $2801, size= $0147;
 }
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp,  optional = yes;
@@ -71,4 +73,6 @@ SEGMENTS {
     ENDPAD:   load = ENDPAD,   type = rw,  optional = yes;
     INSTPAD:  load = INSTPAD,  type = rw, optional = yes, define = yes;
     INST80:   load = INST80,   type = rw, optional = yes, define = yes;
+    EZPAD:    load = EZPAD,    type = rw, optional = yes, define = yes;
+    EZCURS:   load = EZCURS,   type = rw, optional = yes, define = yes;
 }
